$Id$

Job Scheduler 6.x 1.0 Beta 3, 2010-09-14
----------------------------------------

- Fix notice.

Job Scheduler 6.x 1.0 Beta 2, 2010-09-12
----------------------------------------

- Replace FEEDS_REQUEST_TIME with JOB_SCHEDULER_REQUEST_TIME.
- Fix indexes.

Job Scheduler 6.x 1.0 Beta 1, 2010-09-11
----------------------------------------

- Initial commit: schedule execution at predetermined time, periodic scheduling.