@@ -7,41 +7,73 @@
  */
 
 /**
- * Handle adding and removing jobs from schedule.
+ * Use to make Job Scheduler exceptions identifiable by type.
+ */
+class JobSchedulerException extends Exception {}
+
+/**
+ * Manage scheduled jobs.
  */
 class JobScheduler {
   /**
-   * Create a single instance of JobScheduler.
+   * The name of this scheduler.
    */
-  public static function instance() {
-    static $instance;
-    if (!isset($instance)) {
-      $class = variable_get('job_scheduler_class', 'JobScheduler');
-      $instance = new $class();
+  protected $name;
+
+  /**
+   * Produces a single instance of JobScheduler for a schedule name.
+   */
+  public static function get($name) {
+    static $schedulers;
+    // Instantiante a new scheduler for $name if we haven't done so yet.
+    if (!isset($schedulers[$name])) {
+      $class = variable_get('job_scheduler_class_'. $name, 'JobScheduler');
+      $schedulers[$name] = new $class($name);
     }
-    return $instance;
+    return $schedulers[$name];
   }
 
   /**
-   * Protect constructor.
+   * Creates a JobScheduler object.
    */
-  protected function __construct() {}
+  protected function __construct($name) {
+    $this->name = $name;
+  }
+
+  /**
+   * Returns scheduler info.
+   *
+   * @see hook_cron_job_scheduler_info().
+   *
+   * @throws JobSchedulerException.
+   */
+  public function info() {
+    // Collect info for all schedules once.
+    static $info;
+    if (!$info) {
+      $info = module_invoke_all('cron_job_scheduler_info');
+      drupal_alter('cron_job_scheduler_info', $info);
+    }
+    if (isset($info[$this->name])) {
+      return $info[$this->name];
+    }
+    throw new JobSchedulerException('Could not find Job Scheduler cron information for '. check_plain($this->name));
+  }
 
   /**
    * Add a job to the schedule, replace any existing job.
    *
-   * A job is uniquely identified by $job = array(callback, type, id).
+   * A job is uniquely identified by $job = array(type, id).
    *
    * @param $job
    *   An array that must contain the following keys:
-   *   'callback' - The callback to evoke.
    *   'type'     - A string identifier of the type of job.
    *   'id'       - A numeric identifier of the job.
    *   'period'   - The time when the task should be executed.
    *   'periodic' - True if the task should be repeated periodically.
    *
    * @code
-   * function callback($job) {
+   * function worker_callback($job) {
    *   // Work off job.
    *   // Set next time to be called. If this portion of the code is not
    *   // reached for some reason, the scheduler will keep periodically invoking
@@ -51,6 +83,7 @@ class JobScheduler {
    * @endcode
    */
   public function set($job) {
+    $job['name'] = $this->name;
     $job['last'] = REQUEST_TIME;
     $job['next'] = REQUEST_TIME + $job['period'];
     $job['scheduled'] = 0;
@@ -59,92 +92,63 @@ class JobScheduler {
   }
 
   /**
+   * Reserve a job.
+   */
+  protected function reserve($job) {
+    $job['name'] = $this->name;
+    $job['scheduled'] =
+    $job['last'] = REQUEST_TIME;
+    $job['next'] = $job['period'] + REQUEST_TIME;
+    drupal_write_record('job_schedule', $job, array('name', 'type', 'id'));
+  }
+
+  /**
    * Remove a job from the schedule, replace any existing job.
    *
-   * A job is uniquely identified by $job = array(callback, type, id).
+   * A job is uniquely identified by $job = array(type, id).
    */
   public function remove($job) {
     db_delete('job_schedule')
-      ->condition('callback', $job['callback'])
+      ->condition('name', $this->name)
       ->condition('type', $job['type'])
       ->condition('id', isset($job['id']) ? $job['id'] : 0)
       ->execute();
   }
 
   /**
-   * Remove all jobs for a given callback and type.
+   * Remove all jobs for a given type.
    */
-  public function removeAll($callback, $type) {
+  public function removeAll($type) {
     db_delete('job_schedule')
-      ->condition('callback', $callback)
+      ->condition('name', $this->name)
       ->condition('type', $type)
       ->execute();
   }
 
   /**
-   * Periodic cron task.
+   * Dispatches a job.
    *
-   * Dispatches jobs until a limit of 200 jobs or 30 seconds processing time is
-   * reached.
+   * Executes a worker callback or if schedule declares a queue name, queues a
+   * job for execution.
+   *
+   * @param $job
+   *   A $job array as passed into set() or read from job_schedule table.
+   *
+   * @throws Exception
+   *   Exceptions thrown by code called by this method are passed on.
    */
-  public function cron() {return;
-    // Check and set scheduler semaphore, take time.
-    if (variable_get('job_scheduler_cron', FALSE)) {
-      watchdog('JobScheduler', 'Last cron process did not finish.', array(), WATCHDOG_ERROR);
+  public function dispatch($job) {
+    $info = $this->info();
+    if (!$job['periodic']) {
+      $this->remove($job);
     }
-    variable_set('job_scheduler_cron', TRUE);
-    $start = time();
-
-    // Reschedule stuck periodic jobs after one hour.
-    db_update('job_schedule')
-    ->fields(array(
-      'scheduled' => 0,
-    ))
-    ->condition('scheduled', REQUEST_TIME - 3600, '<')
-    ->condition('periodic', 1)
-    ->execute();
-
-    // Query and dispatch scheduled jobs.
-    $start = time();
-    $jobs = db_select('job_schedule')
-      ->fields('job_schedule', array('*'))
-      ->condition('scheduled', 0)
-      ->condition('next', REQUEST_TIME, '<')
-      ->orderBy('next', 'ASC')
-      ->range(0, 200)
-      ->execute();
-    foreach ($jobs as $job) {
-      // Flag periodic jobs as scheduled, remove one-off jobs.
-      if ($job['periodic']) {
-        $job['scheduled'] = $job['last'] = REQUEST_TIME;
-        $job['next'] = $job['period'] + REQUEST_TIME;
-        drupal_write_record('job_schedule', $job, array('callback', 'type', 'id'));
-      }
-      else {
-        $this->remove($job);
-      }
-      // Queue job if there is a queue declared for it, otherwise execute it.
-      if (function_exists($job['callback'])) {
-        if (!$this->queue($job)) {
-          $job['callback']($job);
-        }
-      }
-      if (time() > ($start + 30)) {
-        break;
+    if ($info['queue name']) {
+      if (DrupalQueue::get($info['queue name'])->createItem($job)) {
+        $this->reserve($job);
       }
     }
-
-    // Unflag and post a message that we're done.
-    variable_set('job_scheduler_cron', FALSE);
-    watchdog('JobScheduler', 'Finished processing schedule after !time.', array('!time' => format_interval(time() - $start)));
-  }
-
-  /**
-   * Add a job to a queue.
-   *
-   * @todo: Implement.
-   */
-  protected function queue($job) {
-    return FALSE;
+    if (function_exists($info['worker callback'])) {
+      $info['worker callback']($job);
+    }
   }
 }
