@@ -10,12 +10,40 @@
  * Implementation of hook_cron().
  */
 function job_scheduler_cron() {
-  job_scheduler()->cron();
-}
+  // Reschedule stuck periodic jobs after one hour.
+  db_update('job_schedule')
+    ->fields(array(
+      'scheduled' => 0,
+    ))
+    ->condition('scheduled', REQUEST_TIME - 3600, '<')
+    ->condition('periodic', 1)
+    ->execute();
 
-/**
- * Return a JobScheduler object.
- */
-function job_scheduler() {
-  return JobScheduler::instance();
+  // Query and dispatch scheduled jobs.
+  $start = time();
+  $total =
+  $failed = 0;
+  $jobs = db_select('job_schedule', NULL, array('fetch' => PDO::FETCH_ASSOC))
+            ->fields('job_schedule')
+            ->condition('scheduled', 0)
+            ->condition('next', REQUEST_TIME, '<')
+            ->orderBy('next', 'ASC')
+            ->range(0, 200)
+            ->execute();
+  foreach ($jobs as $job) {
+    try {
+      JobScheduler::get($job['name'])->dispatch($job);
+    }
+    catch (Exception $e) {
+      watchdog('job_scheduler', $e->getMessage(), array(), WATCHDOG_ERROR);
+      $failed++;
+    }
+    $total++;
+    if (time() > ($start + 30)) {
+      break;
+    }
+  }
+
+  // Leave a note on how much time we spent processing.
+  watchdog('job_scheduler', 'Finished processing scheduled jobs (!time s, !total total, !failed failed).', array('!time' => format_interval(time() - $start), '!total' => $total, '!failed' => $failed));
 }
